<resources>
    <string name="app_name">Spotify Search App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_spotify">Search Spotify</string>
    <string name="search">Search</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="shows">Shows</string>
    <string name="search_something">Search Something!!</string>
    <string name="playlists">Playlists</string>
    <string name="search_error">Please enter a search query</string>
    <string name="fetching_error">There was an error while fetching your search results. Please try again.</string>
    <string name="error_header">Error!!</string>
    <string name="fetching_data">Fetching Data</string>
</resources>