<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.HomeFragment">

        <EditText
            android:id="@+id/et_search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="12dp"
            android:hint="@string/search_spotify"
            android:background="@drawable/bg_search_field_unselected"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_search_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_search_text"
            android:text="@string/search_error"
            android:textSize="12sp"
            android:textColor="@color/error_red"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="4dp"
            />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_error"
            android:layout_marginTop="12dp"
            android:text="@string/search"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_artists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="4dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_artists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0"
                    android:text="@string/artists"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="40dp"
                    />

                <ImageView
                    android:id="@+id/iv_down_arrow_artists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/down_arrow"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_artists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="320dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="4dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_albums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_artists"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="4dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_albums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/albums"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    app:layout_constraintVertical_bias="0"
                    android:layout_marginBottom="40dp"
                    />

                <ImageView
                    android:id="@+id/iv_down_arrow_albums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/down_arrow"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="320dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="4dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_albums"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="4dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_playlists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/playlists"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0"
                    android:layout_marginBottom="40dp"
                    />

                <ImageView
                    android:id="@+id/iv_down_arrow_playlists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/down_arrow"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_playlists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="320dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="4dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_search_something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/search_something"
            android:textSize="18sp"
            android:layout_marginTop="120dp"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/search_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="cv_albums, cv_artists, cv_playlists"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>